--- a/Index.html
+++ b/Index.html
@@ -355,6 +355,54 @@
     .cell-muted {
       color: var(--muted)
     }
+
+    .footer {
+      margin-top: 18px;
+      padding: 12px 0;
+      text-align: center
+    }
+
+    .footer a {
+      color: var(--accent);
+      text-decoration: none
+    }
+
+    .footer a:hover {
+      text-decoration: underline
+    }
+
+    .footer .github-link {
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
+      margin-left: 0;
+      color: var(--muted);
+      text-decoration: none;
+      vertical-align: middle
+    }
+
+    .footer .footer-sep {
+      margin: 0 10px;
+      color: var(--muted);
+      vertical-align: middle
+    }
+
+    .footer .github-link:hover {
+      color: var(--accent)
+    }
+
+    .footer .github-icon {
+      width: 1em;
+      height: 1em;
+      display: block;
+      fill: currentColor
+    }
+
+    .footer-divider {
+      height: 1px;
+      background: #eee;
+      margin: 18px -14px 0 -14px
+    }
   </style>
 </head>
 
@@ -1562,6 +1610,18 @@
     setAdmitVisible(false);
     setAdmitTab('admit');
   </script>
+
+  <div class="footer-divider"></div>
+
+  <footer class="footer muted small">
+    Need guidance? <a href="https://docs.google.com/document/d/1TxlBE1vI4WK_BTvwI6KKxWuMgfX6MAjSxJkEstTmNIs/edit" target="_blank" rel="noopener noreferrer">Read the docs</a>.
+    <span class="footer-sep" aria-hidden="true">|</span>
+    <a class="github-link" href="https://github.com/mingaworks/fishnet-recycle-system" target="_blank" rel="noopener noreferrer" aria-label="Source code on GitHub" title="Source code on GitHub">
+      <svg class="github-icon" viewBox="0 0 16 16" aria-hidden="true">
+        <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.01 8.01 0 0 0 16 8c0-4.42-3.58-8-8-8Z"></path>
+      </svg>
+    </a>
+  </footer>
 </body>
 
 </html>
