--- a/Index.html
+++ b/Index.html
@@ -356,10 +356,39 @@
       color: var(--muted)
     }
 
+    .disclosure-btn {
+      background: transparent;
+      color: #f97316;
+      border: none;
+      padding: 0;
+      margin-top: 0;
+      border-radius: 0;
+      font-size: 13px;
+      text-decoration: none
+    }
+
+    .disclosure-btn:hover {
+      text-decoration: underline
+    }
+
     .footer {
       margin-top: 18px;
       padding: 12px 0;
       text-align: center
+    }
+
+    .footer-inner {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 10px;
+      flex-wrap: wrap
+    }
+
+    .footer-actions {
+      display: inline-flex;
+      align-items: center;
+      gap: 10px
     }
 
     .footer a {
@@ -378,13 +407,13 @@
       margin-left: 0;
       color: var(--muted);
       text-decoration: none;
-      vertical-align: middle
+      line-height: 1
     }
 
     .footer .footer-sep {
-      margin: 0 10px;
+      margin: 0;
       color: var(--muted);
-      vertical-align: middle
+      line-height: 1
     }
 
     .footer .github-link:hover {
@@ -1400,7 +1429,7 @@
             '<div class="small muted">' + (when ? when : '') + '</div>' +
             '<div class="small muted">Payment: ' + escapeHtml(p.paymentId || '') + ' • Fisherman ID: ' + escapeHtml(p.fishermanId || '') + '</div>' +
             '<div class="flex" style="margin-top:8px">' +
-            '<button class="secondary" data-audit-payment="' + escapeHtml(p.paymentId) + '">View drop-offs</button>' +
+            '<button class="disclosure-btn" data-audit-payment="' + escapeHtml(p.paymentId) + '">&gt; View drop-offs</button>' +
             '<div class="right muted small" data-audit-status></div>' +
             '</div>' +
             '<div class="small" data-audit-panel style="margin-top:8px;display:none"></div>';
@@ -1413,7 +1442,7 @@
             const isVisible = panel.style.display !== 'none';
             if (isVisible) {
               panel.style.display = 'none';
-              btn.textContent = 'View drop-offs';
+              btn.textContent = '> View drop-offs';
               statusEl.innerText = '';
               return;
             }
@@ -1426,7 +1455,7 @@
             google.script.run
               .withSuccessHandler(drops => {
                 btn.disabled = false;
-                btn.textContent = 'Hide drop-offs';
+                btn.textContent = 'v Hide drop-offs';
                 panel.style.display = 'block';
 
                 if (!drops || drops.length === 0) {
@@ -1614,13 +1643,20 @@
   <div class="footer-divider"></div>
 
   <footer class="footer muted small">
-    Need guidance? <a href="https://docs.google.com/document/d/1TxlBE1vI4WK_BTvwI6KKxWuMgfX6MAjSxJkEstTmNIs/edit" target="_blank" rel="noopener noreferrer">Read the docs</a>.
-    <span class="footer-sep" aria-hidden="true">|</span>
-    <a class="github-link" href="https://github.com/mingaworks/fishnet-recycle-system" target="_blank" rel="noopener noreferrer" aria-label="Source code on GitHub" title="Source code on GitHub">
-      <svg class="github-icon" viewBox="0 0 16 16" aria-hidden="true">
-        <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.01 8.01 0 0 0 16 8c0-4.42-3.58-8-8-8Z"></path>
-      </svg>
-    </a>
+    <div class="footer-inner">
+      <span>
+        Need guidance?
+        <a href="https://docs.google.com/document/d/1TxlBE1vI4WK_BTvwI6KKxWuMgfX6MAjSxJkEstTmNIs/edit" target="_blank" rel="noopener noreferrer">Read the docs</a>.
+      </span>
+      <span class="footer-actions">
+        <span class="footer-sep" aria-hidden="true">|</span>
+        <a class="github-link" href="https://github.com/mingaworks/fishnet-recycle-system" target="_blank" rel="noopener noreferrer" aria-label="Source code on GitHub" title="Source code on GitHub">
+          <svg class="github-icon" viewBox="0 0 16 16" aria-hidden="true">
+            <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.01 8.01 0 0 0 16 8c0-4.42-3.58-8-8-8Z"></path>
+          </svg>
+        </a>
+      </span>
+    </div>
   </footer>
 </body>
 
