Update README.md and docs

--- a/Index.html
+++ b/Index.html
@@ -2048,7 +2048,7 @@
       <div class="footer-inner">
         <span>
           Need guidance?
-          <a href="https://docs.google.com/document/d/1TxlBE1vI4WK_BTvwI6KKxWuMgfX6MAjSxJkEstTmNIs/edit" target="_blank"
+          <a href="<?= adiDocUrl ?>" target="_blank"
             rel="noopener noreferrer">Read the docs</a>.
         </span>
         <span class="footer-actions">
